--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,36 +1,60 @@
 body {
     color: #ffffff;
-    background: url(../images/sith-lord.jpg);
-    background-repeat: no-repeat;
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: url(../images/fet-closeup.jpg);
     background-size: cover;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Open Sans', 'Helvetica Neue', sans-serif
-}
-
-.container-left {
-    padding: .5rem 0;
-    max-width: 450px;
-    margin: 5rem 0 0 3rem;
-    background-color: rgba(49, 49, 49, 0.315);
-    border-radius: 1%;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .container-counter {
     width: auto;
     margin: 1rem;
-    border: solid 2px rgba(255, 0, 0, 0.301);
+    background-color:  rgba(0, 0, 0, 0.596);
     border-radius: 1%;
 }
 
-
-p,
-h1, 
-h2, 
-h3, 
-h4, 
-h5, 
-h6 {
-    padding: .25rem 1rem .25rem 1rem;
+#wins-text {
+    color: rgb(66, 255, 145);
 }
 
+#losses-text {
+    color: rgb(165, 16, 16);
+}
+
+#player-guesses-list {
+    color: rgb(34, 181, 240);
+}
+
+p {
+    padding: 0rem 1rem .5rem 1rem;
+}
+
+h3,
+h6 {
+    padding: 0rem 1rem 0rem 1rem;
+}
+
+h1 {
+    padding: 3rem 1rem 0rem 1rem;
+}
+
+.col-4 {
+    background: rgba(3, 44, 41, 0.582);
+    min-height: 800px;
+    margin-left: 4rem;
+}
+
+#directions-text {
+    color: #2b7a74;
+    font-size: large;
+    padding-top: 2rem;
+}
+
+#player-guesses-list {
+    padding-bottom: 2rem;
+}
+
+#Remaining-Guesses {
+    padding-bottom: 2rem;
+}
